# pahheb-tools

./: .aider.chat.history.md  .aider.input.history  .gitignore  LICENSE  README.md  transcribe.py
.github/workflows/: summarize.yml  test.yml
docs/: summarize.md  transcribe.md  yt-transcriber.md
summarize/: README.md  pyproject.toml  run_tests.sh  setup.sh  summarize
summarize/summarize_src/: __init__.py  __main__.py  cli.py  config.py  file_writer.py  summarizer.py
summarize/tests/: test_summarize.py
transcribe/: README.md  pyproject.toml  run_tests.sh  setup.sh  transcribe
transcribe/models/: README.md
transcribe/tests/: __init__.py  test_transcribe.py
transcribe/transcribe_src/: __init__.py  __main__.py  audio_processor.py  cli.py  config.py  file_writer.py  local_processor.py  progress.py  run-transcribe  whisper.py  youtube_downloader.py  youtube_processor.py
yt-transcriber/: .gitignore  README.md  pyproject.toml  setup.sh  yt-transcribe
yt-transcriber/tests/: __init__.py  test_playlist.py  test_transcript.py  test_url_parser.py
yt-transcriber/yt_transcriber/: __init__.py  __main__.py  cli.py  config.py  downloader.py  file_writer.py  playlist.py  transcript.py  url_parser.py  whisper.py
