[project]
name = "yt-transcriber"
version = "1.0.0"
description = "YouTube video transcription tool with official transcript support and local Whisper transcription"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "youtube-transcript-api>=0.6.0",
    "pytube>=15.0.0",
    "faster-whisper>=1.0.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
]

[project.scripts]
yt-transcribe = "yt_transcriber.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B904",  # allow raising custom errors without chaining
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
